--- a/environment.yml
+++ b/environment.yml
@@ -171,8 +171,8 @@ dependencies:
       - threadpoolctl==3.1.0
       - tokenizers==0.13.3
       - toolz==0.12.0
-      - torch==2.0.1
-      - torch-cluster==1.6.1
+    #  - torch==2.0.1
+     # - torch-cluster==1.6.1
       - torch-geometric==2.3.1
       - torch-scatter==2.1.1
       - torchmetrics==0.11.4
